--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,83 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-prettier"]
+  "extends": "stylelint-config-prettier",
+  "plugins": ["stylelint-declaration-strict-value", "stylelint-order"],
+  "ignoreFiles": ["./**/*.md", "./**/*.js", "./**/*.tsx", "./lib/@testing/**/*.css"],
+  "rules": {
+    "at-rule-empty-line-before": [
+      "always",
+      {
+        "except": ["blockless-after-same-name-blockless", "first-nested"],
+        "ignore": ["after-comment", "inside-block"],
+        "ignoreAtRules": ["import"]
+      }
+    ],
+    "function-name-case": ["lower", { "ignoreFunctions": ["pxToRem", "makeCol"] }],
+    "at-rule-no-unknown": [true, { "ignoreAtRules": ["mixin", "define-mixin", "for", "if", "else"] }],
+    "at-rule-no-vendor-prefix": true,
+    "color-hex-case": "lower",
+    "color-named": "never",
+    "declaration-empty-line-before": [
+      "never",
+      {
+        "ignore": ["after-comment", "after-declaration", "inside-single-line-block"]
+      }
+    ],
+    "declaration-no-important": true,
+    "font-family-name-quotes": "always-where-recommended",
+    "function-url-quotes": "always",
+    "indentation": 2,
+    "media-feature-name-no-vendor-prefix": true,
+    "no-empty-source": true,
+    "no-invalid-double-slash-comments": true,
+    "no-missing-end-of-source-newline": true,
+    "number-leading-zero": "never",
+    "property-no-unknown": [true, { "ignoreProperties": ["composes"] }],
+    "property-no-vendor-prefix": true,
+    "selector-max-compound-selectors": 4,
+    "selector-no-vendor-prefix": true,
+    "selector-pseudo-class-no-unknown": [true, { "ignorePseudoClasses": ["global"] }],
+    "scale-unlimited/declaration-strict-value": [
+      ["/color/", "font-family", "font-size", "z-index"],
+      {
+        "ignoreKeywords": {
+          "": ["inherit", "currentColor", "transparent"]
+        }
+      }
+    ],
+    "string-quotes": "single",
+    "value-no-vendor-prefix": true,
+    "declaration-property-value-blacklist": {
+      "border": ["/thin/", "/medium/", "/thick/"]
+    },
+    "declaration-block-no-duplicate-properties": [true, { "ignoreProperties": ["composes"] }],
+    "max-nesting-depth": 4,
+    "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$",
+    "order/properties-order": [
+      "position",
+      "z-index",
+      "top",
+      "right",
+      "bottom",
+      "left",
+
+      "display",
+      "overflow",
+      "box-sizing",
+      "width",
+      "height",
+      "padding",
+      "border",
+      "margin",
+
+      "background",
+      "color",
+
+      "font-family",
+      "font-size",
+      "line-height",
+      "text-align",
+
+      "cursor"
+    ]
+  }
 }
