--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,11 @@
 {
-  "files.associations": {
-    ".babelrc": "jsonc",
-    ".eslintrc": "jsonc",
-    ".prettierrc": "jsonc",
-
-    ".stylelintrc": "json",
-
-    ".dockerignore": "ignore",
-    ".eslintignore": "ignore",
-    ".flowconfig": "ignore"
-  },
-
-  "javascript.validate.enable": false,
-  "javascript.format.enable": false,
-  "typescript.validate.enable": false,
-  "typescript.format.enable": false,
-
-  "flow.useNPMPackagedFlow": true,
-  "search.exclude": {
-    ".git": true,
-    ".eslintcache": true,
-    "app/dist": true,
-    "app/main.prod.js": true,
-    "app/main.prod.js.map": true,
-    "bower_components": true,
-    "dll": true,
-    "flow-typed": true,
-    "release": true,
-    "node_modules": true,
-    "npm-debug.log.*": true,
-    "test/**/__snapshots__": true,
-    "yarn.lock": true
-  },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "editor.tabSize": 2,
+  "files.autoSave": "off",
+  "css.validate": false,
+  "tslint.autoFixOnSave": true,
+  "tslint.ignoreDefinitionFiles": false,
+  "tslint.configFile": "tslint.json",
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "prettier.stylelintIntegration": true
 }
