--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "@babel/register": "^7.0.0",
     "@types/react": "16.4.11",
     "@types/react-test-renderer": "16.0.2",
+    "@types/redux": "^3.6.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
