integrate react-apollo (GQL!)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@config/*": ["./app/lib/@config/*"],
       "@constants/*": ["./app/lib/@constants/*"],
       "@decorators/*": ["./app/lib/@decorators/*"],
+      "@graphql/*": ["./app/lib/@graphql/*"],
       "@helpers/*": ["./app/lib/@helpers/*"],
       "@postcss/*": ["./app/lib/@postcss/*"]
     },
