--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "productName": "ElectronReact",
   "version": "0.17.1",
   "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "config": {
+    "graphqlDev": "http://localhost:4000/graphql",
+    "graphqlDevSubs": "http://localhost:4001/graphql"
+  },
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
     "build-dll": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.renderer.dev.dll.babel.js --colors",
@@ -11,6 +15,7 @@
     "build-renderer": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.renderer.prod.babel.js --colors",
     "dev": "cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn start-renderer-dev",
     "check-types": "tsc",
+    "generateTypes": "cross-env GRAPHQL=$npm_package_config_graphqlDev ts-node --project tsconfig.server.json app/lib/@graphql/types/generateGQLTypes.ts",
     "lint": "cross-env NODE_ENV=development tslint --project tsconfig.json app/**/*.ts app/**/*.tsx",
     "lint-styles": "stylelint '**/*.*(css|scss)' --syntax scss",
     "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
@@ -211,10 +216,14 @@
     "enzyme-to-json": "^3.3.4",
     "fbjs-scripts": "^1.0.1",
     "file-loader": "^2.0.0",
+    "graphql-code-generator": "0.12.6",
+    "graphql-codegen-typescript-template": "0.12.6",
+    "graphql-tools": "4.0.0",
     "husky": "^1.1.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
+    "merge-graphql-schemas": "1.5.7",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
     "opencollective-postinstall": "^2.0.1",
@@ -247,6 +256,7 @@
     "testcafe-browser-provider-electron": "^0.0.6",
     "testcafe-live": "^0.1.4",
     "testcafe-react-selectors": "^3.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.12.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-language-service": "^0.9.9",
@@ -262,13 +272,19 @@
   },
   "dependencies": {
     "@researchgate/react-intersection-observer": "^0.7.4",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link-http": "^1.5.9",
     "class-names": "^1.0.0",
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.2.3",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "history": "^4.7.2",
     "react": "^16.6.3",
+    "react-apollo": "^2.3.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-redux": "^5.1.1",
