make it work so far

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "ElectronReact",
-  "version": "0.17.1",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "name": "stackbee-electron",
+  "productName": "StackbeeIoApp",
+  "version": "0.0.1",
+  "description": "Electron application for stackbee.io",
   "config": {
     "graphqlDev": "http://localhost:4000/graphql",
     "graphqlDevSubs": "http://localhost:4001/graphql"
@@ -20,6 +20,7 @@
     "lint-styles": "stylelint '**/*.*(css|scss)' --syntax scss",
     "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
     "package": "yarn build && electron-builder build --publish never",
+    "package-debug": "cross-env DEBUG_PROD=true yarn package",
     "package-all": "yarn build && electron-builder build -mwl",
     "package-ci": "yarn postinstall && yarn build && electron-builder --publish always",
     "package-linux": "yarn build && electron-builder build --linux",
@@ -201,6 +202,7 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
     "chalk": "^2.4.1",
+    "chokidar": "^2.0.4",
     "concurrently": "^4.1.0",
     "connected-react-router": "^5.0.1",
     "cross-env": "^5.2.0",
@@ -228,6 +230,7 @@
     "node-sass": "^4.10.0",
     "opencollective-postinstall": "^2.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-color-function": "^4.0.1",
     "postcss-conditionals": "^2.1.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-for": "^2.1.1",
@@ -284,6 +287,7 @@
     "graphql-tag": "^2.10.0",
     "history": "^4.7.2",
     "jsonwebtoken": "^8.4.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^16.6.3",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.6.3",
